--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css" media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -25,22 +25,33 @@
     <li class="collection-header"><h5>Choose channels</h5></li>
     {% for channel in channels %}
     <li class="collection-item">
-        <form action="#">
-            <input type="checkbox" id="{{channels[channel]}}" />
+            <input type="checkbox" name="{{channels[channel]}}" id="{{channels[channel]}}" />
             <label for="{{channels[channel]}}">{{channel}}</label>
-        </form></li>
+        </li>
     {% endfor %}
 </ul>
-    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-    <i class="material-icons right">send</i></button>
+    <button class="btn waves-effect waves-light" type="submit" onclick="submitmyshit()">Submit
+        <i class="material-icons right">send</i></button>
 </div>
 
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="/static/js/materialize.min.js"></script>
-<!-- <script>
-    var entry = document.createElement("li");
-    entry.appendChild(document.createTextNode("content"));
-    document.getElementById("bla").appendChild(entry)</script> -->
+<script>
+function submitmyshit() {
+    var channels = '{{channels}}';
+    retobj = [];
+    //for (channell in channels) {
+    //    console.log(document.getElementById(channels[channel]));
+    //}
+    '{% for channel in channels %}'
+    console.log(document.getElementById('{{channels[channel]}}').checked);
+    if (document.getElementById('{{channels[channel]}}').checked == true){
+        retobj.push('{{channels[channel]}}');
+    };
+    '{% endfor %}'
+    console.log(retobj);
+}
+</script>
 </body>
 </html>
