--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 </header>
 <div class="container">
 <ul class="collection with-header" id="bla">
-    <li class="collection-header"><h5>Choose channels</h5></li>
+    <li class="collection-header"><h5>Choose Topics</h5></li>
     {% for tag in channels %}
     <li class="collection-item">
             <input type="checkbox" name="{{tag}}" id="{{tag}}" />
